--- a/src/main/Main.fxml
+++ b/src/main/Main.fxml
@@ -5,6 +5,8 @@
 <?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Tab?>
@@ -53,9 +55,15 @@
                            <children>
                               <TextField fx:id="cConnectionStatusTextField" editable="false" layoutX="140.0" layoutY="59.0" text="Not Connected" />
                               <Label layoutX="35.0" layoutY="63.0" text="Connection Status" />
-                              <TextField fx:id="cAddressTextField" layoutX="138.0" layoutY="242.0" prefHeight="25.0" prefWidth="268.0" />
-                              <Label layoutX="55.0" layoutY="246.0" text="Enter Address" />
-                              <Button fx:id="cConnectButton" layoutX="242.0" layoutY="279.0" mnemonicParsing="false" text="Connect" />
+                              <TextField fx:id="cAddressTextField" layoutX="138.0" layoutY="96.0" prefHeight="25.0" prefWidth="268.0" />
+                              <Label layoutX="54.0" layoutY="100.0" text="Enter Address" />
+                              <ComboBox layoutX="139.0" layoutY="162.0" prefWidth="150.0" promptText="None" />
+                              <Label layoutX="52.0" layoutY="166.0" text="Security Policy" />
+                              <Label layoutX="36.0" layoutY="183.0" prefHeight="55.0" prefWidth="93.0" text="Message Security Mode" wrapText="true" />
+                              <ComboBox layoutX="139.0" layoutY="198.0" prefWidth="150.0" promptText="None" />
+                              <CheckBox layoutX="138.0" layoutY="130.0" mnemonicParsing="false" textAlignment="RIGHT" />
+                              <Label layoutX="39.0" layoutY="130.0" text="Reverse Connect" />
+                              <Button fx:id="cConnectButton" layoutX="242.0" layoutY="335.0" mnemonicParsing="false" onAction="#connectButtonClicked" text="Connect" />
                            </children>
                         </AnchorPane>
                     </content>
