--- a/src/main/Main.fxml
+++ b/src/main/Main.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.MainController">
+<VBox xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.MainController">
   <children>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
       <children>
@@ -51,19 +51,20 @@
                 </Tab>
                   <Tab text="Connection">
                     <content>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                      <AnchorPane>
                            <children>
                               <TextField fx:id="cConnectionStatusTextField" editable="false" layoutX="140.0" layoutY="59.0" text="Not Connected" />
                               <Label layoutX="35.0" layoutY="63.0" text="Connection Status" />
                               <TextField fx:id="cAddressTextField" layoutX="138.0" layoutY="96.0" prefHeight="25.0" prefWidth="268.0" />
                               <Label layoutX="54.0" layoutY="100.0" text="Enter Address" />
-                              <ComboBox layoutX="139.0" layoutY="162.0" prefWidth="150.0" promptText="None" />
+                              <ComboBox fx:id="cSecurityPolicyComboBox" layoutX="139.0" layoutY="162.0" prefWidth="150.0" promptText="None" />
                               <Label layoutX="52.0" layoutY="166.0" text="Security Policy" />
                               <Label layoutX="36.0" layoutY="183.0" prefHeight="55.0" prefWidth="93.0" text="Message Security Mode" wrapText="true" />
-                              <ComboBox layoutX="139.0" layoutY="198.0" prefWidth="150.0" promptText="None" />
-                              <CheckBox layoutX="138.0" layoutY="130.0" mnemonicParsing="false" textAlignment="RIGHT" />
+                              <ComboBox fx:id="cMessageSecurityModeComboBox" layoutX="139.0" layoutY="198.0" prefWidth="150.0" promptText="None" />
+                              <CheckBox fx:id="cReverseConnectCheckBox" layoutX="138.0" layoutY="130.0" mnemonicParsing="false" textAlignment="RIGHT" />
                               <Label layoutX="39.0" layoutY="130.0" text="Reverse Connect" />
                               <Button fx:id="cConnectButton" layoutX="242.0" layoutY="335.0" mnemonicParsing="false" onAction="#connectButtonClicked" text="Connect" />
+                              <Button fx:id="cCreateCertificateButton" layoutX="423.0" layoutY="335.0" mnemonicParsing="false" onAction="#cCreateCertificateButtonClicked" text="Create Certificate" />
                            </children>
                         </AnchorPane>
                     </content>
