--- a/src/main/CertificatePopUp.fxml
+++ b/src/main/CertificatePopUp.fxml
@@ -1,19 +1,54 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox prefHeight="465.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.CertificatePopUpController">
   <children>
-    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
+    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="475.0" prefWidth="640.0" VBox.vgrow="ALWAYS">
       <children>
-        <Label alignment="CENTER" layoutX="155.0" layoutY="177.0" style="&#10;" text="Drag components from Library here…" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
-          <font>
-            <Font size="18.0" />
-          </font>
-        </Label>
+            <Label layoutX="42.0" layoutY="45.0" text="Common Name" />
+            <Label layoutX="42.0" layoutY="79.0" text="Organisation" />
+            <Label layoutX="42.0" layoutY="113.0" text="Organisation Unit" />
+            <Label layoutX="42.0" layoutY="151.0" text="Locality" />
+            <Label layoutX="42.0" layoutY="185.0" prefHeight="17.0" prefWidth="33.0" text="State" />
+            <Label layoutX="41.0" layoutY="219.0" text="Country" />
+            <Label layoutX="351.0" layoutY="45.0" text="Application URI" />
+            <Label layoutX="350.0" layoutY="87.0" text="Domain Names:" />
+            <Label layoutX="350.0" layoutY="172.0" text="IP Addresses" />
+            <ComboBox fx:id="ccRSAKeyStrengthComboBox" layoutX="153.0" layoutY="295.0" prefHeight="25.0" prefWidth="67.0" />
+            <Label layoutX="30.0" layoutY="14.0" text="Subject" />
+            <Label layoutX="320.0" layoutY="14.0" text="OPC UA Information" />
+            <Label layoutX="37.0" layoutY="263.0" text="Certifiate Settings" />
+            <Label layoutX="50.0" layoutY="299.0" text="RSA Key Strength" />
+            <Label layoutX="230.0" layoutY="299.0" text="Signature Algorithm" />
+            <Label layoutX="444.0" layoutY="299.0" text="Certificate Validity" />
+            <CheckBox fx:id="ccPasswordEnableCheckBox" layoutX="56.0" layoutY="329.0" mnemonicParsing="false" />
+            <Label layoutX="77.0" layoutY="329.0" text="Password protect private key" />
+            <PasswordField fx:id="ccPasswordField" layoutX="146.0" layoutY="354.0" prefHeight="25.0" prefWidth="473.0" />
+            <PasswordField fx:id="ccRepeatPasswordField" layoutX="146.0" layoutY="390.0" prefHeight="25.0" prefWidth="473.0" />
+            <Label layoutX="50.0" layoutY="358.0" text="Password" />
+            <Label layoutX="51.0" layoutY="394.0" text="Password (repeat)" />
+            <TextField fx:id="ccCommonNameTextField" layoutX="153.0" layoutY="41.0" />
+            <TextField fx:id="ccOrganisationTextField" layoutX="153.0" layoutY="75.0" />
+            <TextField fx:id="ccOrganisationUnitTextField" layoutX="153.0" layoutY="109.0" />
+            <TextField fx:id="ccLocalityTextField" layoutX="154.0" layoutY="147.0" />
+            <TextField fx:id="ccStateTextField" layoutX="154.0" layoutY="181.0" />
+            <TextField fx:id="ccCountryTextField" layoutX="154.0" layoutY="215.0" />
+            <TextField fx:id="ccApplicationURITextField" layoutX="438.0" layoutY="41.0" />
+            <TextArea fx:id="ccDomainNamesTextArea" layoutX="438.0" layoutY="81.0" prefHeight="79.0" prefWidth="149.0" />
+            <TextArea fx:id="ccIPAddressesTextArea" layoutX="437.0" layoutY="166.0" prefHeight="79.0" prefWidth="149.0" />
+            <ComboBox fx:id="ccSignatureAlgorithmComboBox" layoutX="343.0" layoutY="295.0" prefHeight="5.0" prefWidth="85.0" />
+            <ComboBox fx:id="ccCertificateValidityComboBox" layoutX="541.0" layoutY="295.0" prefHeight="5.0" prefWidth="85.0" />
+            <Button fx:id="ccCancelButton" layoutX="558.0" layoutY="426.0" mnemonicParsing="false" text="Cancel" />
+            <Button fx:id="ccOKButton" layoutX="508.0" layoutY="426.0" mnemonicParsing="false" onAction="#ccOnOKButtonClicked" text="OK" />
       </children>
     </AnchorPane>
   </children>
